add_executable(00_link_test 00_link_test.cpp)
target_link_libraries(00_link_test zen_engine)

add_executable(01_init_context 01_init_context.cpp)
target_link_libraries(01_init_context zen_engine)

add_executable(02_create_swapchain 02_create_swapchain.cpp)
target_link_libraries(02_create_swapchain zen_engine)

add_executable(03_shader_program 03_shader_program.cpp)
target_link_libraries(03_shader_program zen_engine)

add_executable(forward_renderer_test forward_renderer_test.cpp)
target_link_libraries(forward_renderer_test zen_engine)